fix fonts and spacing

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -198,20 +198,20 @@ body {
   .social-media-container {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
     padding: 100px;
 
     .social-media {
-      width: 280px;
+      width: 200px;
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin-left: 15px;
-      margin-right: 15px;
+      margin-left: 45px;
+      margin-right: 45px;
 
       .social-media-text {
         text-align: center;
-        font-size: $font-size-h2;
+        font-size: $font-size-h3;
         color: $text-black;
         margin-bottom: 40px;
 
@@ -382,14 +382,12 @@ body {
       .social-media {
         width: 200px; 
 
-
         .social-logo {
           width: 50px;
           height: 50px;
         }
   
         .social-media-text {
-          font-size: $font-size-h3;
           line-height: 1.3em;
           margin-top: 16px;
         }
